--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,6 +24,7 @@
                 android:id="@+id/tvTitleLogin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/abril_fatface"
                 android:text="Connectez-vous"
                 android:textSize="20sp" />
 
