--- a/app/src/main/res/layout/activity_add_reservation.xml
+++ b/app/src/main/res/layout/activity_add_reservation.xml
@@ -108,7 +108,7 @@
                 <Spinner
                     android:id="@+id/spTypeReservation"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="42dp"
                     android:spinnerMode="dropdown" />
             </androidx.cardview.widget.CardView>
         </TableRow>
