Finalisation de l'interface graphique

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -24,6 +24,7 @@
                 android:id="@+id/tvTitleForgotPassword"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/abril_fatface"
                 android:text="Changez votre mot de passe"
                 android:textSize="20sp" />
         </TableRow>
