--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,8 @@
 
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="735dp"
+        android:layout_width="408dp"
+        android:layout_height="845dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
