Finalisation de l'interface graphique

--- a/app/src/main/res/layout/activity_add_reservation.xml
+++ b/app/src/main/res/layout/activity_add_reservation.xml
@@ -24,7 +24,7 @@
             android:gravity="center">
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/tvTitleAddReservation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/abril_fatface"
