--- a/app/src/main/res/layout/activity_update_reservation.xml
+++ b/app/src/main/res/layout/activity_update_reservation.xml
@@ -24,11 +24,12 @@
             android:gravity="center">
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/tvTitleModifyReservation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/abril_fatface"
-                android:text="Modifiez votre réservation:"
+                android:gravity="center"
+                android:text="Modifiez votre réservation"
                 android:textSize="20sp" />
         </TableRow>
 
