Finalisation de l'interface graphique

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -3,11 +3,38 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/backgroundColor2">
+
+    <View
+        android:id="@+id/bgTitleApp"
+        android:layout_width="405dp"
+        android:layout_height="109dp"
+        android:background="@color/backgroundColor"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.571"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/tvTitleApp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/abril_fatface"
+        android:gravity="center"
+        android:text="TourisTick"
+        android:textColor="#CC4545"
+        android:textSize="48sp"
+        app:layout_constraintBottom_toBottomOf="@+id/bgTitleApp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/bgTitleApp"
+        app:layout_constraintTop_toTopOf="@+id/bgTitleApp" />
 
     <LinearLayout
-        android:layout_width="409dp"
-        android:layout_height="844dp"
+        android:layout_width="419dp"
+        android:layout_height="610dp"
         android:background="@color/backgroundColor2"
         android:gravity="center"
         android:orientation="vertical"
