--- a/app/src/main/res/layout/activity_add_reservation.xml
+++ b/app/src/main/res/layout/activity_add_reservation.xml
@@ -3,11 +3,38 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/backgroundColor2">
+
+    <View
+        android:id="@+id/bgTitleApp"
+        android:layout_width="405dp"
+        android:layout_height="109dp"
+        android:background="@color/backgroundColor"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.571"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/tvTitleApp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/abril_fatface"
+        android:gravity="center"
+        android:text="TourisTick"
+        android:textColor="#CC4545"
+        android:textSize="48sp"
+        app:layout_constraintBottom_toBottomOf="@+id/bgTitleApp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/bgTitleApp"
+        app:layout_constraintTop_toTopOf="@+id/bgTitleApp" />
 
     <TableLayout
-        android:layout_width="409dp"
-        android:layout_height="844dp"
+        android:layout_width="414dp"
+        android:layout_height="643dp"
         android:background="@color/backgroundColor2"
         android:gravity="center"
         android:stretchColumns="*"
@@ -15,7 +42,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-
 
 
         <TableRow
@@ -35,7 +61,7 @@
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center" >
+            android:gravity="center">
 
             <TextView
                 android:id="@+id/tvNomReservation"
@@ -47,7 +73,7 @@
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
+                android:layout_height="wrap_content">
 
                 <EditText
                     android:id="@+id/etNomReservation"
@@ -91,7 +117,7 @@
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center" >
+            android:gravity="center">
 
             <TextView
                 android:id="@+id/tvTypeReservation"
@@ -103,7 +129,7 @@
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
+                android:layout_height="wrap_content">
 
                 <Spinner
                     android:id="@+id/spTypeReservation"
@@ -144,7 +170,7 @@
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center" >
+            android:gravity="center">
 
             <Button
                 android:id="@+id/btnAdd"
