--- a/app/src/main/res/layout/activity_list_reservations.xml
+++ b/app/src/main/res/layout/activity_list_reservations.xml
@@ -6,6 +6,32 @@
     android:layout_height="match_parent"
     android:background="@color/backgroundColor2">
 
+    <View
+        android:id="@+id/bgTitleApp"
+        android:layout_width="405dp"
+        android:layout_height="109dp"
+        android:background="@color/backgroundColor"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.571"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/tvTitleApp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/abril_fatface"
+        android:gravity="center"
+        android:text="TourisTick"
+        android:textColor="#CC4545"
+        android:textSize="48sp"
+        app:layout_constraintBottom_toBottomOf="@+id/bgTitleApp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/bgTitleApp"
+        app:layout_constraintTop_toTopOf="@+id/bgTitleApp" />
+
     <TextView
         android:id="@+id/tvTitleListReservations"
         android:layout_width="wrap_content"
@@ -19,8 +45,9 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TableLayout
-        android:layout_width="414dp"
-        android:layout_height="533dp"
+        android:id="@+id/tableLayout"
+        android:layout_width="409dp"
+        android:layout_height="132dp"
         android:background="@color/backgroundColor2"
         android:gravity="center"
         android:stretchColumns="*"
@@ -105,17 +132,65 @@
         </TableRow>
 
         <!-- Row 2 -->
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#F0F0F0" />
 
         <!-- Row 3 -->
+
+
+    </TableLayout>
+
+    <TableLayout
+        android:layout_width="409dp"
+        android:layout_height="355dp"
+        android:gravity="center|right"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tableLayout">
+
+        <TableRow
+            android:layout_width="291dp"
+            android:layout_height="wrap_content"
+            android:background="#E9CBCB"
+            android:gravity="center"
+            android:stretchColumns="*">
+
+            <TextView
+                android:id="@+id/tvOffre"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="14dp"
+                android:text="Offre" />
+
+            <TextView
+                android:id="@+id/tvOffre2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="14dp"
+                android:text="Pourcentage" />
+        </TableRow>
+
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#FFFFFF" />
+            android:layout_height="match_parent"
+            android:background="@color/white"
+            android:gravity="center">
 
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="14dp"
+                android:gravity="center"
+                android:text="Réduction" />
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="14dp"
+                android:gravity="center"
+                android:text="20%" />
+        </TableRow>
 
     </TableLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
