--- a/app/src/main/res/layout/activity_delete_reservation.xml
+++ b/app/src/main/res/layout/activity_delete_reservation.xml
@@ -64,11 +64,11 @@
             android:gravity="center">
 
             <TextView
-                android:id="@+id/tvIdDelete"
+                android:id="@+id/tvNomDelete"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Id du réservation:"
+                android:text="Nom du réservation:"
                 android:textSize="20sp" />
 
             <androidx.cardview.widget.CardView
@@ -77,11 +77,11 @@
                 android:layout_marginEnd="30dp">
 
                 <EditText
-                    android:id="@+id/etIdDelete"
+                    android:id="@+id/etNomDelete"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:ems="10"
-                    android:hint="L'id du réservation"
+                    android:hint="Nom du réservation"
                     android:inputType="text" />
             </androidx.cardview.widget.CardView>
         </TableRow>
