--- a/app/src/main/res/layout/activity_reservation_management.xml
+++ b/app/src/main/res/layout/activity_reservation_management.xml
@@ -173,6 +173,32 @@
 
         </androidx.cardview.widget.CardView>
 
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cvChatbot"
+            android:layout_width="178dp"
+            android:layout_height="154dp"
+            android:layout_margin="14dp"
+            app:cardCornerRadius="14dp"
+            app:cardElevation="30dp"
+            app:layout_column="1"
+            app:layout_row="2">
+
+            <TextView
+                android:id="@+id/tvChatbot"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|center_horizontal"
+                android:text="Chatbot" />
+
+            <ImageView
+                android:id="@+id/ivChatbot"
+                android:layout_width="106dp"
+                android:layout_height="91dp"
+                android:layout_gravity="center"
+                app:srcCompat="@drawable/chatbot" />
+
+        </androidx.cardview.widget.CardView>
+
     </androidx.gridlayout.widget.GridLayout>
 
     <Button
