--- a/app/src/main/res/layout/activity_add_reservation.xml
+++ b/app/src/main/res/layout/activity_add_reservation.xml
@@ -149,7 +149,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Place:"
+                android:text="Prix:"
                 android:textSize="20sp" />
 
             <androidx.cardview.widget.CardView
