--- a/app/src/main/res/layout/activity_update_reservation.xml
+++ b/app/src/main/res/layout/activity_update_reservation.xml
@@ -65,7 +65,7 @@
             android:gravity="center">
 
             <TextView
-                android:id="@+id/tvNomReservation"
+                android:id="@+id/tvNomReservationUpdate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -77,7 +77,7 @@
                 android:layout_height="wrap_content">
 
                 <EditText
-                    android:id="@+id/etNomReservation"
+                    android:id="@+id/etNomReservationUpdate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:ems="10"
@@ -93,7 +93,7 @@
             android:gravity="center">
 
             <TextView
-                android:id="@+id/tvPlaceRéservation"
+                android:id="@+id/tvPlaceRéservationUpdate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -105,7 +105,7 @@
                 android:layout_height="wrap_content">
 
                 <EditText
-                    android:id="@+id/etPlaceReservation"
+                    android:id="@+id/etPlaceReservationUpdate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:ems="10"
@@ -121,7 +121,7 @@
             android:gravity="center">
 
             <TextView
-                android:id="@+id/tvTypeReservation"
+                android:id="@+id/tvTypeReservationUpdate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -133,7 +133,7 @@
                 android:layout_height="wrap_content">
 
                 <Spinner
-                    android:id="@+id/spTypeReservation"
+                    android:id="@+id/spTypeReservationUpdate"
                     android:layout_width="match_parent"
                     android:layout_height="34dp"
                     android:spinnerMode="dropdown" />
@@ -146,7 +146,7 @@
             android:gravity="center">
 
             <TextView
-                android:id="@+id/tvPrixRéservation"
+                android:id="@+id/tvPrixRéservationUpdate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -158,7 +158,7 @@
                 android:layout_height="wrap_content">
 
                 <EditText
-                    android:id="@+id/etPrixReservation"
+                    android:id="@+id/etPrixReservationUpdate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:ems="10"
